--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -5,10 +5,10 @@
     padding: 1.5em;
     text-align: left;
     width:340px;
-    max-width: 100vw;
-    max-height: 100vw;
+    max-width: 90vw;
     border-radius: 25px;
     transition: all 0.4s;
+    box-sizing: border-box;
 }
 
 .Card h3 {
